# ogms_studio

./: .env.example  .gitignore  .hintrc  README.md  main.py  package-lock.json  package.json  pyproject.toml  scenario.config.yaml
core/: renderer.d.ts
core/gl/: glLib.ts
electron/: main.ts  menu.ts  noodle.ts  preload.ts  tsconfig.json  vite.config.ts
electron/ipc/: dialog.ts  refresh.ts
electron/ipc/ldle/: context.ts  messagePipe.ts
ldle/: README.md  __init__.py  main.py  pyproject.toml
ldle/core/: config.py  message_pipe.py
noodle/: README.md  __init__.py  main.py
noodle/core/: config.py
noodle/module/hello/: __init__.py  hello.py
noodle/module/names/: __init__.py  endpoint.py  names.py
scenario/: config.yaml
scenario/hello/: __init__.py  hello.py  index.ts
scenario/hello/node/: pyproject.toml
scenario/hello/node/src/: __init__.py  endpoint.py  hello.py  hooks.py
scenario/hello/ui/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scenario/hello/ui/src/: renderer.ts
scenario/interfaces/: ihello.py
scenario/names/: __init__.py  endpoint.py  names.py
scenario/names/ts/: type.ts
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/public/shaders/dems/: debug.glsl  mask.glsl  mesh.glsl  show.glsl  smoothing.glsl
ui/public/shaders/hello/: fit.glsl  particle.glsl  particleUpdate.glsl
ui/public/shaders/patch/: edge.glsl  edgeRibboned.glsl  (+4 more)
ui/src/: App.css  App.tsx
ui/src/components/: framework.tsx
(+11 files in other folders)
