[project]
name = "ogms_studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdal==3.10.2",
    "py-noodle>=0.1.1",
]

[tool.uv.workspace]
members = [
    "scenario/hello/node",
    "ldle",
]

[tool.uv.sources]
ldle = { workspace = true }

[dependency-groups]
dev = [
    "ldle",
]
